[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prbl-scanner"
version = "0.1.0"
description = "AI code security scanner — finds what AI coding tools miss"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["security", "scanner", "ai", "vulnerability", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.33.0",
]

[project.scripts]
prbl-scanner = "prbl.cli:main"

[project.urls]
Homepage = "https://prbl-landing.vercel.app"
Repository = "https://github.com/noreplywmsplaybook-pixel/prbl-scanner"
"Bug Tracker" = "https://github.com/noreplywmsplaybook-pixel/prbl-scanner/issues"
Security = "https://github.com/noreplywmsplaybook-pixel/prbl-scanner/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["prbl*"]
exclude = ["tests*", "venv*"]
